force-app/main/default/objects/ssot__WorkResourceAbsence__dlm/ssot__WorkResourceAbsence__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Work Resource</referenceEntityGroup>
        <referenceEntityName>WorkResourceAbsence</referenceEntityName>
        <referenceEntitySubjectArea>Work Resource</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>