force-app/main/default/objects/ssot__WorkResourceAbsence__dlm/fields/ssot__AddressText__c.field-meta.xml
<CustomField>
    <fullName>ssot__AddressText__c</fullName>
    <label>Address</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AddressText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>