force-app/main/default/objects/ssot__WorkResourceAbsence__dlm/fields/ssot__DistanceUnitOfMeasureId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DistanceUnitOfMeasureId__c</fullName>
    <label>Distance Unit Of Measure</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DistanceUnitOfMeasureId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>