force-app/main/default/objects/ssot__WorkResourceAbsence__dlm/fields/ssot__DurationMinutes__c.field-meta.xml
<CustomField>
    <fullName>ssot__DurationMinutes__c</fullName>
    <label>Duration In Minutes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DurationMinutes</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>