force-app/main/default/objects/ssot__WorkResourceAbsence__dlm/fields/ssot__EstimatedTravelDistanceFromNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__EstimatedTravelDistanceFromNumber__c</fullName>
    <label>Estimated Travel Distance From</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EstimatedTravelDistanceFromNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>