force-app/main/default/objects/ssot__WorkResourceAbsence__dlm/fields/ssot__EstimatedTravelTimeToMinutes__c.field-meta.xml
<CustomField>
    <fullName>ssot__EstimatedTravelTimeToMinutes__c</fullName>
    <label>Estimated Travel Time To Minutes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EstimatedTravelTimeToMinutes</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>