force-app/main/default/objects/ssot__WorkResourceAbsence__dlm/fields/ssot__IsApproved__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsApproved__c</fullName>
    <label>Is Approved</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsApproved</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>