force-app/main/default/objects/ssot__WorkResourceAbsence__dlm/fields/ssot__rel_1709922311902_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1709922311902_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkResourceAbsence_CreatedById_map__rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>WorkResourceAbsence_CreatedById_map__rel</relationshipLabel>
    <relationshipName>rel_1709922311902_end</relationshipName>
    <type>Lookup</type>
</CustomField>