force-app/main/default/objects/ssot__WorkResourceAbsence__dlm/fields/ssot__TravelTimeFromCalculationBasis__c.field-meta.xml
<CustomField>
    <fullName>ssot__TravelTimeFromCalculationBasis__c</fullName>
    <label>Travel Time From Calculation Basis</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TravelTimeFromCalculationBasis</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>